--- a/src/_base.scss
+++ b/src/_base.scss
@@ -5,18 +5,19 @@
   /*==================================================  Colors ================================================== */
   /* Change favorite color. if you change the --hue-color all the colors changed based on this color so be my guest */
   //https://hslpicker.com/ go to this page and choose your color
-  --hue-color: 187; /*Purple 250 - Green 142 - Blue 230 - Pink 340*/
+  --hue-color: 0; /*Purple 250 - Green 142 - Blue 230 - Pink 340*/
 
   /* HSL color mode */
-  --first-color: hsl(var(--hue-color), 51%, 51%);
+  --first-color: hsl(var(--hue-color), 100%, 64%);
   --first-color-second: hsl(var(--hue-color), 69%, 61%);
   --first-color-alt: hsl(var(--hue-color), 57%, 61%);
   --first-color-lighter: hsl(var(--hue-color), 92%, 85%);
-  --title-color: hsl(var(--hue-color), 8%, 15%);
-  --text-color: hsl(var(--hue-color), 8%, 45%);
+  --title-color: hsl(var(--hue-color), 8%, 9%);
+  --text-color: hsl(var(--hue-color), 10%, 18%);
   --text-color-light: hsl(var(--hue-color), 8%, 65%);
   --input-color: hsl(var(--hue-color), 70%, 96%);
   --body-color: hsl(var(--hue-color), 60%, 99%);
+  //--body-color: #181818;
   --container-color: #fff;
 
   /*========== Font and typography ==========*/
