--- a/src/components/HomeSection/_home.scss
+++ b/src/components/HomeSection/_home.scss
@@ -44,6 +44,8 @@
     }
     &__scroll {
       display: none;
+      // justify-content: center;
+      // margin-top: 16px;
       &_button {
         transition: var(--transition-speed);
         &_mouse {
