skillsList added webkit

--- a/src/_base.scss
+++ b/src/_base.scss
@@ -123,6 +123,7 @@ img {
 /* ============================================= Layout ================================================== */
 .container {
   max-width: 768px;
+  //max-width: 1200px;
   margin-left: var(--mb-1-5);
   margin-right: var(--mb-1-5);
 }
